--- a/localisation/de.json
+++ b/localisation/de.json
@@ -3,5 +3,11 @@
   "about_me": "Ich bin Benjamin, online auch bekannt als <span class=\"text-green\">0x62</span>. Ich bin ein Schüler in Australien und mich für Programmierung, Hardware und Prokrastination. Ich spreche fließend Englisch, Chinesisch HSK4, und Deutsch lernen.",
   "languages": "Meine Lieblingssprachen sind Python und TypeScript!",
   "known_languages": "Das sind die Sprachen, die ich am häufigsten benutze, aber ich kann auch Java, C++, C#, und JavaScript.",
-  "stats": "Hier sind meine statistiken seit dem 20. Juni 2025!"
+  "stats": "Hier sind meine statistiken seit dem 20. Juni 2025!",
+  "contact": "Kontakt",
+  "email": "Email: 0x62@duck.com",
+  "phone": "Telefon: kontakt per Slack oder Email",
+  "wechat": "WeChat: _0x62656e",
+  "my_projects": "Meine Projekte",
+  "more_github": "Mehr dazu <a href=\"https://github.com/0x62entity\">GitHub</a>"
 }
