--- a/localisation/zh.json
+++ b/localisation/zh.json
@@ -9,5 +9,6 @@
   "phone": "电话: 使用slack或邮件联系我",
   "wechat": "微信: _0x62656e",
   "my_projects": "我的项目",
+  "back_terminal": "返回命令行",
   "more_github": "我的<a href=\"https://github.com/0x62b\">GitHub</a>有更多"
 }
