--- a/localisation/de.json
+++ b/localisation/de.json
@@ -9,5 +9,6 @@
   "phone": "Telefon: kontakt per Slack oder Email",
   "wechat": "WeChat: _0x62656e",
   "my_projects": "Meine Projekte",
+  "back_terminal": "Zurück zum Terminal",
   "more_github": "Mehr dazu <a href=\"https://github.com/0x62entity\">GitHub</a>"
 }
