--- a/localisation/en.json
+++ b/localisation/en.json
@@ -9,6 +9,6 @@
   "phone": "Phone: contact me on slack or email",
   "wechat": "WeChat: _0x62656e",
   "my_projects": "My Projects",
-  "back_terminal": "Back to Terminal",
+  "back_terminal": "Back to Terminal (<u>q</u>)",
   "more_github": "More on my <a href=\"https://github.com/0x62b\">GitHub</a>"
 }
